# jush

./: .gitignore  CMakeLists.txt  README.org  default.nix  flake.nix  main.c  progress.org  shell.nix
include/: builtins.h  config.h  environment.h  launcher.h  my_array.h  my_hash.h  my_helpers.h  my_string.h  my_termcolor.h  parser.h  tokenizer.h
src/: builtins.c  environment.c  launcher.c  my_array.c  my_hash.c  my_string.c  parser.c  tokenizer.c
